<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Who Is The First?</string>
    <string name="whoIsFirst">Who Is The First</string>
    <string name="online">Online</string>
    <string name="create_server">Create server</string>
    <string name="queue">Queue</string>
    <string name="currentAttempt">Current attempt =\u0020 &#160;</string>
    <string name="totalAttempt">Current touches =\u0020 &#160;</string>
    <string name="helpText">All players touch the screen at the same time, and wait until the app:</string>
    <string name="helpWhoIsFirst">Choose one of you</string>
    <string name="helpQueue">Generate a queue</string>
    <string name="youAreOnlyTheFirst">You are the One!</string>
    <string name="or">or</string>
    <string name="queueIsNotAvailable">Queue is not available now</string>
    <string name="youWin">You win!</string>
    <string name="helpStartAgain">Double tap to start again</string>
    <string name="backButton">back</string>

    <!-- Statistics -->
    <string name="title_activity_statistics">Statistics</string>
    <string name="current">Current</string>
    <string name="total">Total</string>

    <string name="number_touches">Touches</string>
    <string name="number_attemps">Attempts</string>
    <string name="number_attemps_the_first">Attempts at choosing one</string>
    <string name="number_attemps_queue">Attempts at generating a queue</string>

    <string name="number_touches_total_key" translatable="false">touches_total</string>
    <string name="number_attemps_total_key" translatable="false">attempts_total</string>
    <string name="number_attemps_the_first_total_key" translatable="false">attempts_one_total</string>
    <string name="number_attemps_queue_total_key" translatable="false">attempts_queue_total</string>
    <string name="number_touches_current_key" translatable="false">touches_current</string>
    <string name="number_attemps_current_key" translatable="false">attempts_current</string>
    <string name="number_attemps_the_first_current_key" translatable="false">attempts_one_current</string>
    <string name="number_attemps_queue_current_key" translatable="false">attempts_queue_current</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="timeout_header">Timeout</string>
    <string name="timeout_key" translatable="false">timeout</string>
    <string name="timeout_title">The timeout before choosing, ms</string>
    <string name="timeout_summary">default = %1$d</string>

    <string name="first_time_run" translatable="false">first_time_run</string>


    <!-- Preferences -->
    <string name="title_activity_about">About us</string>
    <string name="app_version">"Version %1$s (%2$d/%3$d)"</string>
    <string name="privacy_policy_ref"><a href="https://kamikadze328.me/whoisthefirst/privacy_policy/index.html">Privacy Policy</a></string>
    <string name="github_ref" translatable="false"><a href="https://github.com/kamikadze328/whoIsTheFirst">Github</a></string>

</resources>
