<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/groupName"
        style="@style/StatisticsTheme.Group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="lolo" />

    <com.kamikadze328.whoisthefirst.views.StatisticsRow
        android:id="@+id/statisticRowTouches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:key="@string/number_touches" />

    <com.kamikadze328.whoisthefirst.views.StatisticsRow
        android:id="@+id/statisticRowAttempts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:key="@string/number_attemps" />

    <com.kamikadze328.whoisthefirst.views.StatisticsRow
        android:id="@+id/statisticRowAttemptsOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:key="@string/number_attemps_the_first" />

    <com.kamikadze328.whoisthefirst.views.StatisticsRow
        android:id="@+id/statisticRowAttemptsQueue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:key="@string/number_attemps_queue" />
</LinearLayout>

